--- a/Game Of Life/Game Of Life.csproj
+++ b/Game Of Life/Game Of Life.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Simulation\GameOfLifeLogic.cs" />
     <Compile Include="Simulation\GameOfLife.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
