--- a/Game Of Life/Game Of Life.csproj
+++ b/Game Of Life/Game Of Life.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="golBoard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="golBoard.Designer.cs">
+      <DependentUpon>golBoard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Simulation\GameOfLifeLogic.cs" />
     <Compile Include="Simulation\GameOfLife.cs" />
     <Compile Include="Form1.cs">
@@ -63,6 +69,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="golBoard.resx">
+      <DependentUpon>golBoard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
