Dynamically resize render window

--- a/Game Of Life/Game Of Life.csproj
+++ b/Game Of Life/Game Of Life.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="api\index.md" />
     <None Include="articles\intro.md" />
@@ -101,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\black_square.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\docfx.console.2.58.4\build\docfx.console.targets" Condition="Exists('packages\docfx.console.2.58.4\build\docfx.console.targets')" />
