--- a/Game Of Life/packages.config
+++ b/Game Of Life/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="docfx.console" version="2.58.4" targetFramework="net472" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
